--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;800&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Raleway';
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+  --PrimaryColor:hsl(179, 99%, 33%);
+  --SecondaryColor:hsl(180, 85%, 55%);
+  --gradientColor:linear-gradient(to right,hsl(180, 85%, 55%),hsl(179, 99%, 33%));
+  --whiteColor:hsl(0,0%,100%);
+  --blackColor:hsl(200, 75%, 2%);
+  --textColor:hsl(240,4%,36%);
+  --whiteColorDeam:hsl(0,0%,93%);
+  --greyText:rgb(190,190,190);
+  --inputColor:rgb(218, 217, 217);
+  --bodyColor:rgb(243,243,243);
+  --cardBG:rgb(225,225,235);
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html{
+  scroll-behavior: smooth;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a{
+  text-decoration: none;
+}
+li{
+  text-decoration: none;
+  list-style: none;
+}
+.section{
+  padding: 4rem 0 2rem;
+}
+.container{
+  padding: 0 1.5rem;
+}
+.icon{
+  font-size: 2rem;
+  cursor: pointer;
+}
+.flex{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.grid{
+  display: grid;
+  align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button{
+  padding: .6rem 1.5rem;
+  background: var(--gradientColor);
+  border-radius: 3rem;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+.button a{
+  color: var(--whiteColor);
+  font-weight: 500;
+}
+.button:hover{
+  background: var(--SecondaryColor);
+}
+img,video{
+  width: 100%;
+  height: auto;
+}
+input{
+  font-size: 100%;
+}
+body{
+  background: var(--bodyColor);
 }
